<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgEagleGreen"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Register"
        android:textColor="@color/bgLightCyan"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bgLightCyan"
            android:fontFamily="sans-serif"
            android:hint="@string/signup_hint_fullname"
            android:textColorHint="@color/bgLightCyan" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_familyname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bgLightCyan"
            android:fontFamily="sans-serif"
            android:hint="@string/signup_hint_familyname"
            android:textColorHint="@color/bgLightCyan" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_signupemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bgLightCyan"
            android:fontFamily="sans-serif"
            android:hint="@string/signup_hint_email"
            android:textColorHint="@color/bgLightCyan" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_signuppassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bgLightCyan"
            android:fontFamily="sans-serif"
            android:hint="@string/signup_hint_password"
            android:textColorHint="@color/bgLightCyan" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bgLightCyan"
            android:fontFamily="sans-serif"
            android:hint="@string/signup_hint_phone"
            android:textColorHint="@color/bgLightCyan" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bgLightCyan"
            android:fontFamily="sans-serif"
            android:hint="Enter Address"
            android:textColorHint="@color/bgLightCyan" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_community"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bgLightCyan"
            android:fontFamily="sans-serif"
            android:hint="Select Community"
            android:textColorHint="@color/bgLightCyan" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/bgLightCyan"
            android:text="Register" />

        <LinearLayout
            android:id="@+id/ll_logintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do you have account?"
                android:textColor="@color/bgLightCyan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="Login"
                android:textColor="@color/bgLightCyan"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>